consegui importar os modelos personalizados .obj

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -12,6 +12,7 @@
 	<script type="module" src="../JS/celula.js" defer></script>
 	<script type="module" src="../JS/cromo.js" defer></script>
 	<script type="module" src="../JS/dna.js" defer></script>
+	<script type="module" src="../JS/teste.js" defer></script>
 
 </head>
 
@@ -26,6 +27,7 @@
 
 	</header>
 	<center>
+	
 		<div class="flex-container cubo">
 			<div class="container-cubo">
 
