--- a/HTML/index.html
+++ b/HTML/index.html
@@ -24,99 +24,117 @@
 		<div class="cabecalho"><img src="../IMG/logoif.png" alt="logo do if" class="logoif">
 			<p>Núcleo, Cromossomos e Câncer</p>
 		</div>
-
 	</header>
-	<center>
-	
-		<div class="flex-container cubo">
-			<div class="container-cubo">
-
-
-				<p>Bem, meu querido, deixe-me contar-lhe uma história muito especial sobre um cubo flutuante que conheci
-					há
-					muitos anos. Era uma tarde ensolarada, e eu estava caminhando pelo campo, quando, de repente, vi
-					algo
-					muito incomum no céu.
-
-				</p>
-				<p> Lá, pairando suavemente acima das árvores, estava um pequeno cubo, brilhando com uma luz suave e
-					mágica.
-					Eu fiquei tão surpresa e encantada com o que estava vendo que decidi me aproximar para dar uma
-					olhada
-					mais de perto.
-
-				</p>
-				<p> Conforme me aproximava, percebi que este cubo não era apenas um objeto comum. Ele parecia estar
-					flutuando com graça e leveza, como se estivesse dançando no ar. Suas bordas eram perfeitamente
-					definidas, e cada lado tinha uma cor diferente, como se cada face fosse uma janela para um mundo
-					diferente.
-				</p>
-				<p> Enquanto observava maravilhada, o cubo começou a girar lentamente no ar, revelando padrões mágicos e
-					desenhos que pareciam ganhar vida. Era como se o próprio cubo estivesse tentando me contar uma
-					história,
-					uma história de beleza e mistério.
-				</p>
-				<p>Fiquei ali parada, hipnotizada pela dança silenciosa do cubo no céu. Ele pairava mais alto e mais
-					alto,
-					até que finalmente desapareceu nas nuvens, deixando para trás uma sensação de maravilha e admiração
-					que
-					nunca esqueci.
-				</p>
-				<p>
-					Aquela foi a única vez que vi um cubo tão especial e mágico como aquele. Mas sempre guardarei a
-					lembrança desse dia como um lembrete de que o mundo está cheio de surpresas e maravilhas, basta
-					estar aberto
-					para vê-las.
-				</p>
-
-
-
-			</div>
-		</div>
-
-	</center>
-
-
 
 
 	<h1 class="texto">TEXTOS</h1>
+	<div class="flex-container cubo"><h5 style="font-size: 10vw;">BIOMAKET</h5>
+		<img src="../IMG/biomaket.jpeg" alt="biomaket" style="width: 80%;">
+		<h1 >Trabalho realizado por: <br> Rickson, Clara, Luiz e Tiago</h1>
+	</div>
 
 	<div class="flex-container cubo">
 
+		<!--loucurinhas-->
+
+
+
+
+
+		<!--loucurinhas-->
+
+
+
+
+
 		<div class="container">
+			
 			<div class="card" style="width: 100%;">
 				<img src="../IMG/todo-tumor-e-cancer.jpg" class="card-img-top" alt="...">
 				<div class="card-body">
-					<h5 class="card-title">Card title</h5>
-					<p class="card-text">Some quick example text to build on the card title and make up the bulk of
-						the card's content.</p>
-					<button type="button" onclick="createScene()" class="gerar3d">Gerar Cena</button>
+					<h5 class="card-title" style="font-size: 5vw;">Como surge o câncer?</h5>
+					<p class="card-text" style="word-spacing: -1.3px;">O DNA é um enorme manual para o corpo humano e é
+						ele quem determina o
+						comportamento de cada célula e quanto à sua multiplicação. A inicialização de um
+						possível câncer ocorre quando o DNA sofre mutações e começa a passar informações
+						erradas para a célula. As mutações ou alterações são comumente recorrentes, pois os
+						30.000 genes que o DNA precisa codificar no corpo inteiro são passíveis de alterações.
+						Por isso, o organismo possui formas diferentes de segurança, para que essas células,
+						com informações erradas, não se reproduzam. </p>
+
+
+
+					<p class="d-inline-flex gap-1">
+						<button class="btn btn-primary" type="button" data-bs-toggle="collapse"
+							data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+							como o organismo se defende?
+						</button>
+					</p>
+					<div class="collapse" id="collapseExample">
+						<div class="card card-body">
+							<ul class="ul-topic">
+								<li class="li-topic">Cada célula possui moléculas que corrigem as mutações do DNA. Elas
+									conseguem perceber quais células possuem mutação e passam a corrigi-las.
+								</li>
+
+								<li class="li-topic">Na maioria das vezes as mutações são inofensivas para o nosso
+									organismo,
+									mas para evitar um acúmulo de mutações em regiões específicas as células se
+									autodestroem,
+									prevenindo que um possível câncer se desenvolva. Caso as células de autodestruição
+									sejam
+									desligadas devido à alterações, o sistema de autodestruição nunca é ativado e a
+									célula
+									defeituosa passa a ser imortal e a se multiplicar.
+								</li>
+
+								<li class="li-topic">É nesse último caso que o sistema imune é ativado. Ele é capaz de
+									eliminar as
+									células defeituosas que podem gerar um câncer. Pois quando uma célula se reproduz,
+									ela é
+									vista
+									pelo organismo como uma ameaça e é destruída.</li>
+							</ul>
+
+						</div>
+
+
+
+
+
+					</div>
+					<p>Quando essas células defeituosas e mutantes se reproduzem rapidamente, o sistema imunológico não
+						consegue acompanhar essa rapidez e essas 3 medidas de segurança do organismo do corpo falham e o
+						câncer se desenvolve. </p>
+					<button type="button" onclick="createScene()" class="gerar3d" id="botao"><p>Quer saber mais? <br> clique aqui</p></button>
 					<div class="content-box">
-						<div id="canvas-container" class="canvas-container"></div>
+						<div id="canvas-container" class="canvas-container">
+							<p>esse é o modelo da célula cancerígena:</p>
+						</div>
 					</div>
 				</div>
 			</div>
 
-			<div class="card" style="width: 100%;">
+			<div class="card" style="width: 100%; ">
 				<img src="../IMG/todo-tumor-e-cancer.jpg" class="card-img-top" alt="...">
 				<div class="card-body">
 					<h5 class="card-title">Card title</h5>
 					<p class="card-text">Some quick example text to build on the card title and make up the bulk of
 						the card's content.</p>
-					<button type="button" onclick="createScene2()" class="gerar3d">Gerar Cena</button>
+					<button type="button" onclick="createScene2()" class="gerar3d" class="botao">Gerar Cena</button>
 					<div class="content-box2">
 						<div id="canvas-container2" class="canvas-container"></div>
 					</div>
 				</div>
 			</div>
 
-			<div class="card" style="width: 100%;">
+			<div class="card" style="width: 100%; ">
 				<img src="../IMG/todo-tumor-e-cancer.jpg" class="card-img-top" alt="...">
 				<div class="card-body">
 					<h5 class="card-title">Card title</h5>
 					<p class="card-text">Some quick example text to build on the card title and make up the bulk of
 						the card's content.</p>
-					<button type="button" onclick="createScene3()" class="gerar3d">Gerar Cena</button>
+					<button type="button" onclick="createScene3()" class="gerar3d" class="botao">Gerar Cena</button>
 					<div class="content-box3">
 						<div id="canvas-container3" class="canvas-container"></div>
 					</div>
@@ -129,9 +147,13 @@
 	</div>
 
 	</div>
-	
+
+
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
 		integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+		integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
 		crossorigin="anonymous"></script>
 </body>
 
