--- a/HTML/index.html
+++ b/HTML/index.html
@@ -22,35 +22,34 @@
 <body>
 	<header>
 		<div class="cabecalho"><img src="../IMG/logoif.png" alt="logo do if" class="logoif">
-			<p>Núcleo, Cromossomos e Câncer</p>
+			<p style="color: white;">Núcleo, Cromossomos e Câncer</p>
 		</div>
 	</header>
 
 
-	<h1 class="texto">TEXTOS</h1>
 	<div class="flex-container cubo">
 
 		<div id="carouselExample" class="carousel slide">
 			<div class="carousel-inner">
-			  <div class="carousel-item active">
-				<img src="../IMG/biomaket.jpeg" class="d-block w-100" alt="...">
-			  </div>
-			  <div class="carousel-item">
-				<img src="../IMG/todo-tumor-e-cancer.jpg" class="d-block w-100" alt="...">
-			  </div>
-			  <div class="carousel-item">
-				<img src="../IMG/logoif.png" class="d-block w-100" alt="...">
-			  </div>
+				<div class="carousel-item active">
+					<img src="../IMG/biomaket.jpeg" class="d-block w-100" alt="...">
+				</div>
+				<div class="carousel-item">
+					<img src="../IMG/todo-tumor-e-cancer.jpg" class="d-block w-100" alt="...">
+				</div>
+				<div class="carousel-item">
+					<img src="../IMG/logoif.png" class="d-block w-100" alt="...">
+				</div>
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-			  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			  <span class="visually-hidden">Anterior</span>
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Anterior</span>
 			</button>
 			<button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-			  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-			  <span class="visually-hidden">Proximo</span>
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Proximo</span>
 			</button>
-		  </div>
+		</div>
 
 
 
@@ -108,17 +107,19 @@
 
 			</div>
 		</div>
-		<div class="content-box">
-			<div id="canvas-container" class="canvas-container">
+		<div style="width: 100%; height: 50vh;" class="newsize">
+			<div class="content-box" style="width: 100%; height: 100%;">
+				<div id="canvas-container" class="canvas-container" style="width: 100%; height: 100%;">
+				</div>
 			</div>
-		</div>
-		<div class="content-box2">
-			<div id="canvas-container2" class="canvas-container"></div>
-		</div>
-		<div class="content-box3">
-			<div id="canvas-container3" class="canvas-container"></div>
-		</div>
+			<div class="content-box2" style="width: 100%; height: 100%;">
+				<div id="canvas-container2" class="canvas-container" style="width: 100%; height: 100%;"></div>
+			</div>
+			<div class="content-box3" style="width: 100%; height: 100%;">
+				<div id="canvas-container3" class="canvas-container" style="width: 100%; height: 100%;"></div>
+			</div>
 
+		</div>
 	</div>
 
 
@@ -400,7 +401,7 @@
 		</div>
 	</div>
 	<div class="flex-container cubo">
-		<iframe   style="width: 100%; height: auto;" src="https://www.youtube.com/embed/mRDklX7rjmg?si=XPBtd5PvBECnHKs4"
+		<iframe src="https://www.youtube.com/embed/mRDklX7rjmg?si=GFlDXelGfCE21Q3D"
 			title="YouTube video player" frameborder="0"
 			allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
 			allowfullscreen></iframe>
