imagem do grupo

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -35,10 +35,7 @@
 					<img src="../IMG/biomaket.jpeg" class="d-block w-100" alt="...">
 				</div>
 				<div class="carousel-item">
-					<img src="../IMG/todo-tumor-e-cancer.jpg" class="d-block w-100" alt="...">
-				</div>
-				<div class="carousel-item">
-					<img src="../IMG/logoif.png" class="d-block w-100" alt="...">
+					<img src="../IMG/grupo.jpg" class="d-block w-100" alt="...">
 				</div>
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -61,7 +58,7 @@
 
 
 		<h5 style="font-size: 10vw;">BIOMAKET</h5>
-		<img src="../IMG/biomaket.jpeg" alt="biomaket" style="width: 80%;">
+		
 		<h1>Trabalho realizado por: <br> Rickson, Clara, Luiz e Tiago</h1>
 	</div>
 
