--- a/HTML/index.html
+++ b/HTML/index.html
@@ -32,11 +32,24 @@
 		<div id="carouselExample" class="carousel slide">
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="../IMG/biomaket.jpeg" class="d-block w-100" alt="...">
-				</div>
-				<div class="carousel-item">
 					<img src="../IMG/grupo.jpg" class="d-block w-100" alt="...">
 				</div>
+				<div class="carousel-item">
+					<img src="../IMG/img1.jpg" class="d-block w-100" alt="...">
+				</div>
+				<div class="carousel-item">
+					<img src="../IMG/img2.jpg" class="d-block w-100" alt="...">
+				</div>
+				<div class="carousel-item">
+					<img src="../IMG/img3.jpg" class="d-block w-100" alt="...">
+				</div>
+				<div class="carousel-item">
+					<img src="../IMG/img4.jpg" class="d-block w-100" alt="...">
+				</div>
+				<div class="carousel-item">
+					<img src="../IMG/img5.jpg" class="d-block w-100" alt="...">
+				</div>
+
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
 				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
